[tool.poetry]
name = "leopa"
version = "0.1.1"
description = "Simple static site generator"
authors = ["masahiko-ofgp <ichigyo.zanmai@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/masahiko-ofgp/leopa"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.4.1"
markdown = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
